@@ -452,20 +452,6 @@ name|lucene
 operator|.
 name|search
 operator|.
-name|CachingWrapperQuery
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|search
-operator|.
 name|Collector
 import|;
 end_import
@@ -481,20 +467,6 @@ operator|.
 name|search
 operator|.
 name|FieldDoc
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|search
-operator|.
-name|Filter
 import|;
 end_import
 
@@ -537,20 +509,6 @@ operator|.
 name|search
 operator|.
 name|Query
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|search
-operator|.
-name|QueryWrapperFilter
 import|;
 end_import
 
@@ -6236,12 +6194,9 @@ name|groupDocs
 argument_list|)
 expr_stmt|;
 specifier|final
-name|Filter
+name|Query
 name|lastDocInBlock
 init|=
-operator|new
-name|QueryWrapperFilter
-argument_list|(
 operator|new
 name|TermQuery
 argument_list|(
@@ -6251,7 +6206,6 @@ argument_list|(
 literal|"groupend"
 argument_list|,
 literal|"x"
-argument_list|)
 argument_list|)
 argument_list|)
 decl_stmt|;
@@ -8031,7 +7985,14 @@ name|topNGroups
 argument_list|,
 name|needsScores
 argument_list|,
+name|sBlocks
+operator|.
+name|createNormalizedWeight
+argument_list|(
 name|lastDocInBlock
+argument_list|,
+literal|false
+argument_list|)
 argument_list|)
 decl_stmt|;
 specifier|final
